@startuml

title __ACCOUNT's Class Diagram__\n

  package  {
    package account {
      class AirlineEmployee {
          - airlineID : int
          - airlineFlights : ArrayList<Flight>
          + AirlineEmployee()
          + getAirlineID()
          + populateFlights()
          + showFlights()
          + accept()
          + getFlightsNumbers()
      }
    }
  }
  

  package  {
    package account {
      class CancellationsVisitor {
          + visit()
          + visit()
          - createAirlineContext()
          - createUserContext()
      }
    }
  }
  

  package  {
    package account {
      class Customer {
          - bookings : JSONObject[]
          + Customer()
          + getPoints()
          + accept()
          + showBookings()
          + hasBookings()
      }
    }
  }
  

  package  {
    package account {
      class CustomerFactory {
          + CustomerFactory()
          + createUser()
      }
    }
  }
  

  package  {
    package account {
      class EmployeeFactory {
          + EmployeeFactory()
          + createUser()
      }
    }
  }
  

  package  {
    package account {
      abstract class Factory {
          {abstract} + createUser()
      }
    }
  }
  

  package  {
    package account {
      class FactoryProducer {
          + produceFactory()
      }
    }
  }
  

  package  {
    package account {
      class LoyaltyPoints {
          - numOfPoints : int
          + LoyaltyPoints()
          + getNumOfPoints()
          + getValueOfPointsInEuro()
          + updatePoints()
      }
    }
  }
  

  package  {
    package account {
      abstract class User {
          - userName : String
          - userID : int
          - userType : int
          # setUserName()
          # setUserID()
          # setUserType()
          + getUserName()
          + getUserID()
          + getUserType()
      }
    }
  }
  

  package  {
    package account {
      interface UserVisitable {
          {abstract} + accept()
      }
    }
  }
  

  package  {
    package account {
      interface UserVisitor {
          {abstract} + visit()
          {abstract} + visit()
      }
    }
  }
  

  AirlineEmployee -up-|> UserVisitable
  AirlineEmployee -up-|> User
  CancellationsVisitor -up-|> UserVisitor
  Customer -up-|> UserVisitable
  Customer -up-|> User
  Customer o-- LoyaltyPoints : points
  CustomerFactory -up-|> Factory
  EmployeeFactory -up-|> Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
